refactor: toList 적용 (#107)